syntax = "proto3";

package rpc.proto;

option go_package = "mapreduce/pkg/rpc/pb;rpcpb";

service Coordinator {
  rpc SubmitJob(SubmitJobRequest) returns (SubmitJobResponse);
}

message SubmitJobRequest {
  repeated string input_files = 1;
  int32 n_reduce              = 2;
  string plugin_path          = 3;
  string map_symbol           = 4;
  string reduce_symbol        = 5;
}

message SubmitJobResponse {
  string job_id = 1;
}