syntax = "proto3";

package rpc.proto;

option go_package = "mapreduce/pkg/rpc/pb;rpcpb";

enum TaskType {
    TaskNone   = 0;
    TaskMap    = 1;
    TaskReduce = 2;
    TaskExit   = 3;
}

message GetTaskArgs {
    string worker_id = 1;
}

message GetTaskReply {
    TaskType type           = 1;
    int32 map_id            = 2;
    int32 reduce_id         = 3;
    string filename         = 4;
    int32 n_map             = 5;
    int32 n_reduce          = 6;
    string job_id           = 7;
    string plugin_path      = 8;
    string map_symbol       = 9;
    string reduce_symbol    = 10;
}

message ReportTaskArgs {
    TaskType type       = 1;
    int32 map_id        = 2;
    int32 reduce_id     = 3;
    bool success        = 4;
    string worker_id    = 5;
}

message ReportTaskReply {}

service MapReduce {
  rpc GetTask(GetTaskArgs) returns (GetTaskReply);
  rpc ReportTask(ReportTaskArgs) returns (ReportTaskReply);
}